# CHTL测试

# 启用测试
enable_testing()

# 添加测试可执行文件
# add_executable(test_scanner test_scanner.cpp)
# add_executable(test_chtl_compiler test_chtl_compiler.cpp)
# add_executable(test_chtljs_compiler test_chtljs_compiler.cpp)

# 添加测试
# add_test(NAME Scanner COMMAND test_scanner)
# add_test(NAME CHTLCompiler COMMAND test_chtl_compiler)
# add_test(NAME CHTLJSCompiler COMMAND test_chtljs_compiler)